nginx_demo/nginx_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  #type: NodePort
  ports:
  - name: http
    port: 80
    #protocol: TCP
    targetPort: 80
    #nodePort: 30080
  selector:
    app: nginx
