nginx_demo/nginx_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: test.bjth
    http:
      paths:
      - path:
        backend:
          serviceName: nginx
          servicePort: 80
