nginx_demo/nginx_ingress_2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-test
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: test.master.com
    http:
      path:
      - path:
        backend:
          serviceName: nginx
          servicePort: 80
